[package]
name = "docker-monorepo-action"
version = "0.1.0"
authors = ["Harry Gogonis <hgogonis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.16"
envy = "0.4"

